--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,20 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Aster Pillbox</title>
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=AW-352428596"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "AW-352428596");
+		</script>
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link
