feat: adicionado tag de conversao no contato profissional

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,21 @@
 
 			gtag("config", "AW-352428596");
 		</script>
+		<!-- Snippet para conversão -->
+		<script>
+			function gtag_report_conversion(url) {
+				var callback = function () {
+					if (typeof url != "undefined") {
+						window.location = url;
+					}
+				};
+				gtag("event", "conversion", {
+					send_to: "AW-352428596/NISjCMvt7tQZELTEhqgB",
+					event_callback: callback,
+				});
+				return false;
+			}
+		</script>
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link
